--- a/upload-server/package.json
+++ b/upload-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "npm install"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
