--- a/spenny-ai-mcp/package.json
+++ b/spenny-ai-mcp/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spenny-ai-mcp-server",
-  "version": "1.0.1",
+  "version": "1.0.3",
+  "type": "module",
   "description": "Zero-setup MCP server for Spenny AI expense tracking with Claude Desktop",
   "main": "index.js",
   "scripts": {
@@ -19,8 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "dotenv": "^17.0.0"
+    "@supabase/supabase-js": "^2.39.0"
   },
   "engines": {
     "node": ">=16.0.0"
