--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   test-and-build:
-    name: Test & Build
+    name: Run Unit Tests and Build
     runs-on: ubuntu-latest
 
     steps:
