Update optional dependencies in package.json and package-lock.json
- Added new optional dependencies for various esbuild packages to support additional platforms, enhancing compatibility across different environments.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "vitest": "^2.1.8"
   },
   "optionalDependencies": {
+    "@esbuild/linux-x64": "^0.25.5",
     "@rollup/rollup-linux-x64-gnu": "^4.44.0",
     "lightningcss-linux-x64-gnu": "^1.30.1"
   }
