--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "optionalDependencies": {
     "@esbuild/linux-x64": "^0.25.5",
     "@rollup/rollup-linux-x64-gnu": "^4.44.0",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.10",
     "lightningcss-linux-x64-gnu": "^1.30.1"
   }
 }
