--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "groq-sdk": "^0.9.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.522.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
