--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "date-fns": "^4.1.0",
     "groq-sdk": "^0.9.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.522.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
