--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,16 +23,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
+          cache-dependency-path: web/package-lock.json
 
       - name: Install dependencies
+        working-directory: web
         run: npm ci
 
       - name: Run unit tests
+        working-directory: web
         run: npm run test:run
 
       - name: Build
+        working-directory: web
         env:
-          # Placeholders so build succeeds in CI (no secrets required for PR checks)
           VITE_SUPABASE_URL: "https://placeholder.supabase.co"
           VITE_SUPABASE_ANON_KEY: "placeholder-anon-key"
         run: npm run build
@@ -48,14 +52,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
+          cache-dependency-path: web/package-lock.json
 
       - name: Install dependencies
+        working-directory: web
         run: npm ci
 
       - name: Install Playwright browsers
+        working-directory: web
         run: npx playwright install --with-deps chromium
 
       - name: Run E2E (Chromium)
+        working-directory: web
         env:
           CI: "true"
           VITE_SUPABASE_URL: "https://placeholder.supabase.co"
