--- a/app/app.json
+++ b/app/app.json
@@ -31,9 +31,10 @@
       "predictiveBackGestureEnabled": false,
       "package": "com.spennyai.app",
       "permissions": [
-        "RECORD_AUDIO",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
     "web": {
@@ -56,6 +57,12 @@
         }
       ],
       "@react-native-community/datetimepicker"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "19f7e8f6-e0e2-41e9-ae27-a8e541c2c1fc"
+      }
+    },
+    "owner": "siddhesh1051"
   }
 }
